--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,7 +30,7 @@
 
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="content-img-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -38,7 +38,7 @@
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
 
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="content-img-right"/>
 
             <h2>Online Reputation Management</h2>
 
@@ -48,7 +48,7 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
 
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="content-img-left"/>
 
             <h2>Social Media Marketing</h2>
 
@@ -58,8 +58,9 @@
         </div>
     </div>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    <div class="aside">
+
+        <div class="benefit-content">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png"/>
             <p>
@@ -67,7 +68,7 @@
             </p>
         </div>
 
-        <div class="benefit-brand">
+        <div class="benefit-content">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -75,7 +76,7 @@
             </p>
         </div>
 
-        <div class="benefit-cost">
+        <div class="benefit-content">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
