--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,11 +26,13 @@
         </div>
     </header>
 
-    <div class="hero"></div>
+    <div class="hero">
+
+    </div>
 
     <div class="content">
         <div class="content-section" id='search-engine-optimization'>
-            <img src="./assets/images/search-engine-optimization.jpg" class="content-img-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt='overhead view of a notebook and workdesk fixtures' class="content-img-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -38,7 +40,7 @@
         </div>
         <div class="content-section" id="online-reputation-management">
 
-            <img src="./assets/images/online-reputation-management.jpg" class="content-img-right"/>
+            <img src="./assets/images/online-reputation-management.jpg" alt='over the shoulder view of a business man working on a laptop' class="content-img-right"/>
 
             <h2>Online Reputation Management</h2>
 
@@ -48,7 +50,7 @@
         </div>
         <div class="content-section" id="social-media-marketing">
 
-            <img src="./assets/images/social-media-marketing.jpg" class="content-img-left"/>
+            <img src="./assets/images/social-media-marketing.jpg" alt='ooverhead view of a conference table decorated with internet buzzwords and app logos' class="content-img-left"/>
 
             <h2>Social Media Marketing</h2>
 
@@ -62,7 +64,7 @@
 
         <div class="benefit-content">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png"/>
+            <img src="./assets/images/lead-generation.png" alt='cartoon of gear funneling into money'/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -70,7 +72,7 @@
 
         <div class="benefit-content">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png"/>
+            <img src="./assets/images/brand-awareness.png" alt='cartoon of a person with a lightbulb head'/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -78,7 +80,7 @@
 
         <div class="benefit-content">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"/>
+            <img src="./assets/images/cost-management.png" alt='cartoon of a gear surrounded by coins'/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
