--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="hero">
-
+        <img src="urban-octo-telegram/Develop/assets/images/digital-marketing-meeting.jpg" id="hero-img" alt="group of racially divers young professionals in a marketing meeting"/>
     </div>
 
     <div class="content">
