--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,11 +26,11 @@
         </div>
     </header>
 
-    <div class="hero">
-        <img src="urban-octo-telegram/Develop/assets/images/digital-marketing-meeting.jpg" id="hero-img" alt="group of racially divers young professionals in a marketing meeting"/>
-    </div>
+    <figure class="hero">
+        <img src="urban-octo-telegram/Develop/assets/images/digital-marketing-meeting.jpg" id="hero-img" alt="group of racially diverse young professionals in a marketing meeting"/>
+    </figure>
 
-    <div class="content">
+    <article class="content">
         <div class="content-section" id='search-engine-optimization'>
             <img src="./assets/images/search-engine-optimization.jpg" alt='overhead view of a notebook and workdesk fixtures' class="content-img-left" />
             <h2>Search Engine Optimization</h2>
@@ -58,9 +58,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </article>
 
-    <div class="aside">
+    <aside class="aside">
 
         <div class="benefit-content">
             <h3>Lead Generation</h3>
@@ -85,7 +85,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
 
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
